# expensebot

./: .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: access.py  api.py  auth_page.py  claude_oauth.py  crypto.py  heartbeat.py  learning.py  legal.py  logging_setup.py  pages.py  rate_limit.py  server.py  skills.md  storage.py  stt.py  system_prompt.md  tts.py  voice.py
bot/common/: agent.py  agent_parser.py  boss_profile.py  context_lookup.py  parser.py  pipeline.py  telegram_reader.py  tools.py
bot/lark/: handlers.py
bot/plugins/: registry.py
bot/plugins/fraud/: skill.md  tools.py
bot/plugins/miles/: skill.md  tools.py
bot/plugins/tax/: skill.md  tools.py
bot/skills/: HEARTBEAT.md  omnihr.md
bot/skills/omnihr/: cli.py  policy.md  (+1 more)
bot/telegram/: handlers.py
expensebot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
extension/: manifest.json
extension/src/: background.js  popup.html  popup.js
infra/: docker-compose.yml  fly.toml  schema.sql
omnihr_client/: __init__.py  auth.py  client.py  exceptions.py  policies.py  schema.py
ops/: nudge_sweeper.py  receipt_cleanup.py  refresh_sweeper.py  schema_refresher.py  status_poller.py
services/whatsapp-bridge/: .gitignore  Dockerfile  index.js  package.json
tenants/: _template.md  glints.md
tests/: test_agent_tool_turns.py  test_context_lookup.py  test_dupe_sniff.py  test_heartbeat.py  test_learning.py  test_merchant_memory.py  test_plugins.py  test_profile.py  test_schema.py  test_voice.py
(+3 files in other folders)
