[project]
name = "expensebot"
version = "0.0.1"
description = "Telegram + Lark bot for filing OmniHR expense claims via receipts"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
  "httpx>=0.27",
  "anthropic>=0.40",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "asyncpg>=0.29",
  "redis>=5.0",
  "pydantic>=2.9",
  "python-telegram-bot>=21.6",
  "weasyprint>=63",
  "boto3>=1.35",
  "stripe>=10",
  "pynacl>=1.5",
  "structlog>=24",
  "claude-agent-sdk>=0.1",
  "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "respx>=0.21",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "omnihr_client*"]
exclude = ["tests*", "extension*", "tenants*", "ops*", "infra*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
